--- a/employeepayrollapp/src/main/resources/application.properties
+++ b/employeepayrollapp/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=EmployeePayrollApp
+
+spring.datasource.url=jdbc:mysql://localhost:3306/Employee_Payroll
+spring.datasource.username=root
+spring.datasource.password=sanketpatel
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
